--- a/elastic-micro/docker-compose.yml
+++ b/elastic-micro/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     volumes:
       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/mnesia/
       - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-    restart: always
+    restart: 'no'
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.4.0
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
     ports:
       - 9300:9200
-    restart: always
+    restart: 'no'
     networks:
       - elasticnetwork
     environment:
