director add to elastic

--- a/elastic-micro/.env
+++ b/elastic-micro/.env
@@ -1,3 +1,7 @@
+# ElasticSearch
 ELASTIC_URL=http://localhost:9300
 ELASTIC_USERNAME=elastic
 ELASTIC_PASSWORD=123456
+# RabbitMQ
+RABBIT_URL=amqp://localhost:5675
+RABBIT_QUEUE=elastic_queue
