--- a/film-micro/.env
+++ b/film-micro/.env
@@ -1,2 +1,8 @@
 # Mongo
 MONGO_URI='mongodb://localhost:27018/moviedb'
+# RabbitMQ
+RABBIT_URL=amqp://localhost:5674
+RABBIT_QUEUE=auth_queue
+# ElasticSearch
+ELASTIC_URL=amqp://localhost:5675
+ELASTIC_QUEUE=elastic_queue
