--- a/film-micro/docker-compose.yml
+++ b/film-micro/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./data:/data/db
     networks:
-      - musicNetwork
+      - filmNetwork
     ports:
       - 27018:27017
     environment:
@@ -22,4 +22,4 @@ services:
       - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     restart: 'no'
 networks:
-  musicNetwork:
+  filmNetwork:
