--- a/music-micro/.env
+++ b/music-micro/.env
@@ -1,2 +1,8 @@
 # Mongo
-MONGO_URI='mongodb://localhost:27017/musicdb'
+MONGO_URI='mongodb://localhost:27019/musicdb'
+# RabbitMQ
+RABBIT_URL=amqp://localhost:5673
+RABBIT_QUEUE=auth_queue
+# ElasticSearch
+ELASTIC_URL=amqp://localhost:5675
+ELASTIC_QUEUE=elastic_queue
